--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/theme/dracula.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/theme/material-palenight.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/theme/solarized.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/theme/monokai.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/theme/material.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/theme/base16-light.min.css"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
@@ -89,7 +109,7 @@
       "
       readonly=""
     ></textarea>
-    <div style="text-align: center; width: 50%">
+    <div style="text-align: center; width: 50%; float: left">
       <button
         class="btn btn-primary"
         type="button"
@@ -99,10 +119,30 @@
         RUN!
       </button>
     </div>
+
+    <div style="text-align: center">
+      <select
+        style="margin-top: 15px; margin-left: 20px; height: 30px; width: 30%"
+        id="select"
+      >
+        <optgroup label="Dark Themes">
+          <option selected>Dracula</option>
+          <option>Material-palenight</option>
+          <option>Material</option>
+          <option>Monokai</option>
+        </optgroup>
+        <optgroup label="Light Themes">
+          <option>Solarized light</option>
+          <option>Base16-light</option>
+          <option>Default</option>
+        </optgroup>
+      </select>
+    </div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/addon/mode/simple.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/mode/meta.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/addon/scroll/simplescrollbars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.1/addon/edit/closebrackets.min.js"></script>
